--- a/web/wasm/BUILD
+++ b/web/wasm/BUILD
@@ -2,14 +2,11 @@ genrule(
     name = "gen_test",
     srcs = ["web_shim.cpp", "//main:squiggles_srcs"],
     outs = [
+        "squiggles.wasm",
         "squiggles.js",
-        "squiggles.wasm"
-        # "a.out.js",
-        # "a.out.wasm",
     ],
     cmd = [
-        # "./tools/emsdk/upstream/emscripten/emcc $SRCS -s MODULARIZE=1 -s EXPORT_NAME=Squiggles -s WASM=1 -s EXTRA_EXPORTED_RUNTIME_METHODS='[\"cwrap\"]' -I main/include --std=gnu++17",
-        "./tools/emsdk/upstream/emscripten/emcc $SRCS -s WASM=1 -s EXTRA_EXPORTED_RUNTIME_METHODS='[\"cwrap\"]' -I main/include --std=gnu++17 -o squiggles.js",
+        "./tools/emsdk/upstream/emscripten/emcc $SRCS -s WASM=1 -s MODULARIZE -s EXTRA_EXPORTED_RUNTIME_METHODS='[\"ccall\", \"cwrap\"]' -I main/include --std=gnu++17 -o squiggles.js",
     ],
     deps = [
         # pulling in the squiggles source directly since we need to rebuild the
