--- a/web/package.json
+++ b/web/package.json
@@ -16,19 +16,22 @@
     "@types/react-dom": "^16.9.10",
     "gh-pages": "^3.1.0",
     "react": "^17.0.1",
+    "react-app-rewired": "^2.1.8",
     "react-code-blocks": "0.0.8",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "two.js": "^0.7.0-stable.1",
     "typescript": "^4.1.3",
-    "web-vitals": "^0.2.4"
+    "wasm-loader": "^1.3.0",
+    "web-vitals": "^0.2.4",
+    "squiggles_wasm": "file:./wasm"
   },
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "BROWSER=none react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
